test/test_examples/semantic_examples/semantic_error/error_6_return_exp_16.zig
// Semantic error: Missing expression in return of non-void function

const ifj = @import("ifj24.zig");
pub fn main() void {
    _ = f();
}

pub fn f() ?f64 {
}